--- a/src/shared/ui/MarketLogo/MarketLogo.module.scss
+++ b/src/shared/ui/MarketLogo/MarketLogo.module.scss
@@ -1,3 +1,23 @@
 .MarketLogo {
     position: relative;
 }
+
+.clickArea {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+
+    a {
+        flex: 1;
+        height: 100%;
+    }
+
+    a:first-child {
+        flex: 0 30px;
+    }
+}
