OrdersHeaderDesktopItem layout fix

--- a/src/features/HeaderDesktopMenu/ui/HeaderDesktopMenu/HeaderDesktopMenu.module.scss
+++ b/src/features/HeaderDesktopMenu/ui/HeaderDesktopMenu/HeaderDesktopMenu.module.scss
@@ -20,6 +20,10 @@
 
             &:not(:last-child) {
                 padding: 0;
+
+                &:not(:first-child) {
+                    height: 100%;
+                }
             }
 
             @media (min-width: 1250px) {
