--- a/src/shared/ui/Avatar/Avatar.module.scss
+++ b/src/shared/ui/Avatar/Avatar.module.scss
@@ -49,7 +49,7 @@
 
 .notification {
     top: 2px;
-    left: 37px;
+    left: calc(100% - 12px);
     width: 14px;
     height: 14px;
     border-radius: 50%;
