--- a/src/features/UserProfile/ui/UserProfileAvatar/UserProfileAvatar.module.scss
+++ b/src/features/UserProfile/ui/UserProfileAvatar/UserProfileAvatar.module.scss
@@ -14,6 +14,10 @@
     text-decoration: none;
     touch-action: manipulation;
     outline: 0;
+
+    &:focus-visible {
+        outline: 2px solid #fce000;
+    }
 }
 
 .avatarContent {
