--- a/src/features/UserProfile/ui/UserProfileItem/UserProfileItem.module.scss
+++ b/src/features/UserProfile/ui/UserProfileItem/UserProfileItem.module.scss
@@ -21,6 +21,10 @@
     &:hover {
         background-color: #f5f5f5;
     }
+
+    &:focus-visible {
+        outline: 2px solid #fce000;
+    }
 }
 
 .itemContent {
@@ -45,4 +49,10 @@
         display: block;
         fill: currentColor;
     }
+}
+
+.count {
+    color: #999;
+    display: inline-block;
+    margin-left: 10px;
 }
