--- a/src/features/UserProfile/ui/UserProfile/UserProfile.module.scss
+++ b/src/features/UserProfile/ui/UserProfile/UserProfile.module.scss
@@ -6,10 +6,16 @@
     display: block;
 }
 
-.menu {
+.menuItems {
     position: relative;
     transition: transform 0.3s ease-out;
     background: #fff;
     font-size: 16px;
     padding: 8px 8px 12px;
+}
+
+.newUser {
+    margin-top: 4px;
+    background: #f4f4f4;
+    padding: 8px;
 }
