UserProfileFavoriteCategory read data from db add

--- a/src/features/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
+++ b/src/features/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
@@ -51,7 +51,7 @@
     font-stretch: normal;
 }
 
-.notViewed .textPrimary > div {
+.notSelected .textPrimary > div {
     position: relative;
 
     &::after {
