CategoryMenu Items components names refactor

--- a/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuFavoriteCategoryItem/CategoryMenuFavoriteCategoryItem.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuFavoriteCategoryItem/CategoryMenuFavoriteCategoryItem.module.scss
@@ -1,4 +1,4 @@
-.FavoriteCategoryItem {
+.CategoryMenuFavoriteCategoryItem {
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
