--- a/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenu/CategoryMenu.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenu/CategoryMenu.module.scss
@@ -1,4 +1,4 @@
-.HeaderTabsList {
+.CategoryMenu {
     position: relative;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.06);
     margin-top: -10px;
@@ -28,18 +28,6 @@
         padding-left: 0;
         padding-right: 0;
     }
-}
-
-.regionSelectWrapper {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.regionSelect {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    margin-right: 12px;
 }
 
 .category {
