--- a/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuAddressItem/CategoryMenuAddressItem.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuAddressItem/CategoryMenuAddressItem.module.scss
@@ -1,4 +1,16 @@
-.RegionSelect {
+.CategoryMenuAddressItem {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin-right: 12px;
+}
+
+.content {
     height: 100%;
     overflow: hidden;
     max-width: 322px;
