--- a/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuBuyerItem/CategoryMenuBuyerItem.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenuBuyerItem/CategoryMenuBuyerItem.module.scss
@@ -1,4 +1,4 @@
-.HeaderTabsItem {
+.CategoryMenuBuyerItem {
     text-align: center;
     white-space: nowrap;
     -webkit-user-select: none;
@@ -13,21 +13,11 @@
     align-items: center;
     margin: 0;
 
-    & :hover {
-        color: #ec0000;
+    &.nodeTabAble:focus-visible {
+        outline: 2px solid #fce000;
     }
 
     a {
-        &:focus-visible:after {
-            position: absolute;
-            right: 0;
-            bottom: 2px;
-            left: 0;
-            content: '';
-            height: 3px;
-            background: #fce000;
-        }
-
         font-weight: 400;
         font-style: normal;
         font-stretch: normal;
@@ -40,6 +30,20 @@
         flex-grow: 1;
         outline: 0;
         position: relative;
+
+        &:hover {
+            color: #ec0000;
+        }
+
+        &:focus-visible:after {
+            right: 12px;
+            left: 12px;
+            position: absolute;
+            bottom: 2px;
+            content: '';
+            height: 3px;
+            background: #fce000;
+        }
 
         span {
             max-width: 100%;
