--- a/src/widgets/CategoryMenu/ui/CategoryMenuItem/CategoryMenuItem.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenuItem/CategoryMenuItem.module.scss
@@ -1,4 +1,4 @@
-.BuyerTypesItem {
+.CategoryMenuItem {
     text-align: center;
     white-space: nowrap;
     -webkit-user-select: none;
@@ -13,11 +13,21 @@
     align-items: center;
     margin: 0;
 
-    &.nodeTabAble:focus-visible {
-        outline: 2px solid #fce000;
+    & :hover {
+        color: #ec0000;
     }
 
     a {
+        &:focus-visible:after {
+            position: absolute;
+            right: 0;
+            bottom: 2px;
+            left: 0;
+            content: '';
+            height: 3px;
+            background: #fce000;
+        }
+
         font-weight: 400;
         font-style: normal;
         font-stretch: normal;
@@ -30,20 +40,6 @@
         flex-grow: 1;
         outline: 0;
         position: relative;
-
-        &:hover {
-            color: #ec0000;
-        }
-
-        &:focus-visible:after {
-            right: 12px;
-            left: 12px;
-            position: absolute;
-            bottom: 2px;
-            content: '';
-            height: 3px;
-            background: #fce000;
-        }
 
         span {
             max-width: 100%;
