--- a/src/features/UserProfile/ui/UserProfileItem/UserProfileItem.module.scss
+++ b/src/features/UserProfile/ui/UserProfileItem/UserProfileItem.module.scss
@@ -37,7 +37,7 @@
 }
 
 .itemImage {
-    color: #222222;
+    color: #222;
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -47,7 +47,7 @@
         width: 24px;
         height: 24px;
         display: block;
-        fill: currentColor;
+        fill: currentcolor;
     }
 }
 
