--- a/src/entities/Carusel/ui/CaruselList/CaruselList.module.scss
+++ b/src/entities/Carusel/ui/CaruselList/CaruselList.module.scss
@@ -5,10 +5,6 @@
     position: relative;
 
     ul {
-        margin-left: 0;
-        margin-right: 0;
-        padding-left: 0;
-        padding-right: 0;
         gap: 12px;
         margin: 0;
         display: flex;
@@ -20,7 +16,7 @@
         scrollbar-width: none;
 
         li {
-            width: calc(16.666666666666668% - 10px);
+            width: calc(16.6667% - 10px);
             min-width: auto;
             max-width: none;
             padding-right: 0;
