--- a/src/features/FavoriteCategory/ui/FavoriteCategory/FavoriteCategory.module.scss
+++ b/src/features/FavoriteCategory/ui/FavoriteCategory/FavoriteCategory.module.scss
@@ -10,8 +10,9 @@
     padding: 0 !important;
     position: relative;
     margin: 0 auto;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.12),
-        0 9px 46px 0 rgba(0, 0, 0, 0.06);
+    box-shadow:
+        0 5px 15px 0 rgb(0 0 0 / 12%),
+        0 9px 46px 0 rgb(0 0 0 / 6%);
 }
 
 .categoryPreview {
@@ -27,7 +28,7 @@
     flex-direction: column;
     gap: 2px;
     position: sticky;
-    background: linear-gradient(180deg, #fff, #fff 95%, hsla(0, 0%, 100%, 0));
+    background: linear-gradient(180deg, #fff, #fff 95%, hsl(0deg 0% 100% / 0%));
 }
 
 .title {
