--- a/src/features/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
+++ b/src/features/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
@@ -55,7 +55,7 @@
     position: relative;
 
     &::after {
-        content: '';
+        content: "";
         position: absolute;
         background-color: red;
         border-radius: 50%;
