--- a/src/features/UserProfile/ui/UserProfileModal/UserProfileModal.module.scss
+++ b/src/features/UserProfile/ui/UserProfileModal/UserProfileModal.module.scss
@@ -15,7 +15,7 @@
     cursor: pointer;
     z-index: 1051;
     background: #fff;
-    box-shadow: 0 5px 46px rgba(0, 0, 0, 0.12), 0 7px 15px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 5px 46px rgb(0 0 0 / 12%), 0 7px 15px rgb(0 0 0 / 12%);
     border-radius: 8px;
     max-height: calc(100% - 80px);
     overflow: auto;
