--- a/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
@@ -51,25 +51,19 @@
         cursor: pointer;
         user-select: none;
         appearance: none;
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
+        border-radius: 4px;
 
         span {
-            flex-grow: 1;
             font-size: 16px;
-            line-height: 38px;
+            font-weight: 500;
+            line-height: 44px;
+            flex-grow: 1;
             color: #04b;
             transition: all 0.12s ease-out;
             display: flex;
             justify-content: center;
             align-items: center;
             vertical-align: middle;
-            font-weight: 500;
-            font-size: 16px !important;
-            font-weight: 500 !important;
-            line-height: 44px !important;
             letter-spacing: 0;
         }
     }
