--- a/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenu/CategoryMenu.module.scss
+++ b/src/widgets/CategoryMenu/ui/CategoryMenu/CategoryMenu/CategoryMenu.module.scss
@@ -1,6 +1,6 @@
 .CategoryMenu {
     position: relative;
-    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.06);
+    box-shadow: 0 2px 3px 0 rgb(0 0 0 / 6%);
     margin-top: -10px;
     margin-bottom: 18px;
     z-index: 101;
@@ -22,6 +22,7 @@
     margin: 0 auto;
     max-width: 1456px;
 }
+
 @media (min-width: 1200px) {
     .listWrapper {
         width: calc(100% - 80px);
