--- a/src/widgets/Header/ui/HeaderMenu/HeaderMenuItemAvatar/HeaderMenuItemAvatar.module.scss
+++ b/src/widgets/Header/ui/HeaderMenu/HeaderMenuItemAvatar/HeaderMenuItemAvatar.module.scss
@@ -18,8 +18,8 @@
     appearance: none;
     cursor: pointer;
 
-    &:before {
-        content: '';
+    &::before {
+        content: "";
         position: absolute;
         border-radius: inherit;
         top: 0;
@@ -27,16 +27,14 @@
         right: 0;
         bottom: 0;
         margin: -2px;
-    }
-
-    &:before {
-        background: linear-gradient(
-            101.67deg,
-            #48cce0 7.19%,
-            #505add 34.11%,
-            #be40c0 62.97%,
-            #fba82b 92.19%
-        );
+        background:
+            linear-gradient(
+                101.67deg,
+                #48cce0 7.19%,
+                #505add 34.11%,
+                #be40c0 62.97%,
+                #fba82b 92.19%
+            );
     }
 
     img {
