--- a/src/widgets/Header/ui/HeaderNavigation/HeaderNavigation.module.scss
+++ b/src/widgets/Header/ui/HeaderNavigation/HeaderNavigation.module.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     appearance: none;
     border: none;
-    font-family: YS Text, Helvetica, Arial, sans-serif;
+    font-family: "YS Text", Helvetica, Arial, sans-serif;
     border-radius: 7px;
     font-weight: 500;
     transition: all 0.12s ease-out;
