--- a/src/features/FavoriteCategory/ui/FavoriteCategoryLoader/FavoriteCategoryLoader.module.scss
+++ b/src/features/FavoriteCategory/ui/FavoriteCategoryLoader/FavoriteCategoryLoader.module.scss
@@ -43,7 +43,8 @@
     text-align: center;
 
     span {
-        border-color: var(--control-primary) transparent transparent
+        border-color:
+            var(--control-primary) transparent transparent
             var(--control-primary);
         width: 38px;
         height: 38px;
@@ -58,7 +59,7 @@
 
         &::after {
             visibility: hidden;
-            content: '\00A0';
+            content: "\00A0";
         }
     }
 }
