--- a/src/pages/OrdersPage/ui/OrdersPageLoader/OrdersPageLoader.module.scss
+++ b/src/pages/OrdersPage/ui/OrdersPageLoader/OrdersPageLoader.module.scss
@@ -19,20 +19,21 @@
     position: relative;
 
     &::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
         transform: translateX(-100%);
-        background-image: linear-gradient(
-            90deg,
-            hsl(0deg 0% 100% / 0%),
-            hsl(0deg 0% 100% / 20%) 20%,
-            hsl(0deg 0% 100% / 50%) 60%,
-            hsl(0deg 0% 100% / 0%)
-        );
+        background-image:
+            linear-gradient(
+                90deg,
+                hsl(0deg 0% 100% / 0%),
+                hsl(0deg 0% 100% / 20%) 20%,
+                hsl(0deg 0% 100% / 50%) 60%,
+                hsl(0deg 0% 100% / 0%)
+            );
         animation: span-animation 2s infinite;
     }
 }
