app Auth processing refactor

--- a/src/pages/RequireAuthPage/ui/RequireAuthPage.module.scss
+++ b/src/pages/RequireAuthPage/ui/RequireAuthPage.module.scss
@@ -40,7 +40,7 @@
     }
 }
 
-a[role="button"] {
+.RequireAuthPage a[role="button"] {
     height: 48px;
     padding: 0 20px;
     border-radius: 16px;
