Footer real layout add

--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -357,7 +357,7 @@
 }
 
 .textInputStateError .textInputBox {
-    border-color: #f33;
+    border-color: #f33 !important;
     border-width: 2px;
 }
 
