footer arch refactor

--- a/src/widgets/Page/ui/Footer/ui/Footer.AppBlock.module.scss
+++ b/src/widgets/Page/ui/Footer/ui/Footer.AppBlock.module.scss
@@ -1,3 +1,11 @@
+.AppBlock {
+    position: relative;
+    background: none;
+    margin-right: 44px;
+    flex-direction: column;
+    display: flex;
+}
+
 .flex {
     display: flex;
     flex-direction: column;
