--- a/src/widgets/Page/ui/Footer/ui/Footer.AppGalleryInstall.module.scss
+++ b/src/widgets/Page/ui/Footer/ui/Footer.AppGalleryInstall.module.scss
@@ -1,3 +1,10 @@
+.AppGalleryInstall {
+    display: inline-block;
+    vertical-align: middle;
+    height: 40px;
+    margin-right: 0;
+}
+
 .link {
     color: #04b;
     cursor: pointer;
