--- a/src/widgets/Header/ui/HeaderMenuItemCart/HeaderMenuItemCart.module.scss
+++ b/src/widgets/Header/ui/HeaderMenuItemCart/HeaderMenuItemCart.module.scss
@@ -50,6 +50,11 @@
     color: #222;
     margin-bottom: 4px;
     min-height: 24px;
+
+    svg {
+        width: 24px;
+        height: 24px;
+    }
 }
 
 .titleWrapper {
