--- a/src/features/AuthByUsername/ui/LoginModal/LoginModal.module.scss
+++ b/src/features/AuthByUsername/ui/LoginModal/LoginModal.module.scss
@@ -8,6 +8,16 @@
     right: 0;
     top: 0;
     z-index: 8990;
+
+    &:before {
+        background: rgba(0, 0, 0, 0.2);
+        bottom: 0;
+        content: "";
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 }
 
 @media only screen and (min-height: 0), only screen and (min-width: 0) {
@@ -33,7 +43,7 @@
 @media only screen and (min-height: 945px),
     only screen and (min-width: 1680px) {
     .overlay {
-        background-image: url("/public/assets/images/login-1680.jpg ");
+        background-image: url("/public/assets/images/login-1680.jpg");
     }
 }
 
