--- a/src/widgets/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
+++ b/src/widgets/UserProfile/ui/UserProfileFavoriteCategory/UserProfileFavoriteCategory.module.scss
@@ -25,6 +25,11 @@
     padding-bottom: 8px;
     padding-left: 30px;
     align-items: center;
+
+    svg {
+        width: 24px;
+        height: 24px;
+    }
 }
 
 .textWrapper {
