Footer anchor highlight on hover fix

--- a/src/widgets/Page/ui/Footer/ui/Footer.UsefulLinks.module.scss
+++ b/src/widgets/Page/ui/Footer/ui/Footer.UsefulLinks.module.scss
@@ -1,6 +1,10 @@
 .wrapper {
     padding: 1px 0;
     background: #f4f4f4;
+
+    a:hover {
+        color: red !important;
+    }
 }
 
 .links {
@@ -93,6 +97,10 @@
     font-size: 13px;
     line-height: 18px;
     color: #666;
+}
+
+.linkSocialContent a:hover .linkSocialTitle {
+    color: red;
 }
 
 .copyRights {
