--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -19,14 +19,18 @@ body {
     padding-right: env(safe-area-inset-right);
     padding-left: env(safe-area-inset-left);
     line-height: 1;
-}
 
-body:has(.pageIsLoading) #footer {
-    display: none;
-}
+    &:has(.userProfileModal) {
+        overflow-y: hidden;
+    }
 
-body:has(.ModalExclusive) #app {
-    display: none;
+    &:has(.pageIsLoading) #footer {
+        display: none;
+    }
+
+    &:has(.ModalExclusive) #app {
+        display: none;
+    }
 }
 
 .cleanButton {
