--- a/src/widgets/Page/ui/Footer/ui/Footer.UsefulLinks.module.scss
+++ b/src/widgets/Page/ui/Footer/ui/Footer.UsefulLinks.module.scss
@@ -1,10 +1,6 @@
 .wrapper {
     padding: 1px 0;
     background: #f4f4f4;
-
-    a:hover {
-        color: red !important;
-    }
 }
 
 .links {
@@ -153,4 +149,8 @@
             height: 16px;
         }
     }
+}
+
+.wrapper a:hover {
+    color: red !important;
 }
