--- a/src/features/RecommendationTabs/ui/RecommendationTabs/RecommendationTabs.module.scss
+++ b/src/features/RecommendationTabs/ui/RecommendationTabs/RecommendationTabs.module.scss
@@ -32,8 +32,6 @@
     height: 36px;
     border-radius: 11px;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
     z-index: 100;
 
@@ -74,7 +72,7 @@
     }
 
     span {
-        color: rgba(33, 32, 31, 0.502);
+        color: rgb(33 32 31 / 50.2%);
         cursor: pointer;
         font-weight: 500;
         transition: color 0.05s;
@@ -96,5 +94,5 @@
     background-color: #42413e;
     border-radius: 11px;
     z-index: 1;
-    transition: transform .175s, width .175s;
+    transition: transform 0.175s, width 0.175s;
 }
