--- a/src/shared/ui/ChefBankMarker/ChefBankMarker.module.scss
+++ b/src/shared/ui/ChefBankMarker/ChefBankMarker.module.scss
@@ -1,21 +1,14 @@
-.ChefBankAlfa {
+.ChefBankMarker {
     height: 20px;
     gap: 2px;
     display: flex;
     align-items: center;
     position: relative;
-
-    svg {
-        width: 23px;
-        height: 12px;
-        color: #8a8784;
-    }
 }
 
 .text {
     line-height: 18px;
     font-size: 12px;
-    color: var(--text-secondary);
     line-clamp: 1;
     overflow: hidden;
     text-overflow: ellipsis;
